<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@drawable/background_white_rounded">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:text="категория: "
				android:textSize="24sp"
				android:gravity="center_vertical"
				android:layout_marginLeft="6dp"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<TextView
				android:id="@+id/category_name"
				android:text="category_name"
				android:textSize="24sp"
				android:gravity="center_vertical"
				android:layout_marginRight="6dp"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>



		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/word_original_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/string_word_original">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/word_original"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:maxLength="50"/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/word_translate_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/string_word_translate">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/word_translate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:maxLength="50"/>

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>

	<LinearLayout
        android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
		android:layout_marginBottom="5dp">

		<Button
			android:id="@+id/cancel_button"
			android:text="@string/string_cancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
			android:textColor="@color/colorWhite"
			android:background="@drawable/default_button_selector"/>

		<Button
			android:id="@+id/add_button"
			android:text="@string/string_add_word"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
			android:layout_marginRight="5dp"
			android:textColor="@color/colorWhite"
			android:background="@drawable/default_button_selector"/>

	</LinearLayout>


</LinearLayout>